made show on hover columns more generic so we can use outside the button column

--- a/src/main/resources/META-INF/resources/frontend/entity-grid-vaadin-grid.css
+++ b/src/main/resources/META-INF/resources/frontend/entity-grid-vaadin-grid.css
@@ -1,8 +1,11 @@
-:host(.button-column) tr td.grid-buttons-column ::slotted(*) {
+/* show-on-hover columns are hidden until the row is hovered on 
+We cant target anything lower than the column because it uses a CSS slot, and ::slotted cant target children*/
+
+:host tr td.show-on-hover ::slotted(*) {
 	opacity:0;
 	transition: opacity 0.1s;
 }
 
-:host(.button-column) tr:hover td.grid-buttons-column ::slotted(*) {
+:host tr:hover td.show-on-hover ::slotted(*) {
 	opacity:1; 
 }
