css class change

--- a/src/main/resources/META-INF/resources/frontend/entity-grid.css
+++ b/src/main/resources/META-INF/resources/frontend/entity-grid.css
@@ -1,4 +1,4 @@
-.entities-view .count {
+.entity-grid .count {
 	font-size:var(--lumo-font-size-xs);
 	font-weight:700;
 	color:var(--lumo-accent-color-1);
