--- a/src/main/resources/META-INF/resources/frontend/basic-tab-sheet.css
+++ b/src/main/resources/META-INF/resources/frontend/basic-tab-sheet.css
@@ -2,3 +2,13 @@ tab-sheet .invisible {
 	visibility:hidden;
  	display:none;
 }
+
+tab-sheet .invisible {
+	visibility:hidden;
+ 	display:none;
+}
+
+tab-sheet .tabs[orientation=horizontal] {
+	margin-bottom:var(--lumo-space-s);
+}
+
