--- a/src/main/resources/META-INF/resources/frontend/entity-grid.css
+++ b/src/main/resources/META-INF/resources/frontend/entity-grid.css
@@ -21,6 +21,10 @@
 	/* color:var(--lumo-contrast);  */
 }
 
+.grid-buttons vaadin-button.invisible {
+	visibility:hidden;
+}
+
 .grid-buttons vaadin-button[aria-disabled=true] {
 	color:var(--lumo-contrast-20pct);
 } 
